[package]
name = "iuab-compile"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
repr = ["hex"]

[dependencies]
iuab-utils = { path = '../iuab-utils' }
hex = { version = "0.4", optional = true }